--- a/session.html
+++ b/session.html
@@ -18,12 +18,12 @@
       </div>
     </div>
     <div class="nav-links">
-      <a href="WebProject.html" class="nav-link">Home</a>
+      <a href="index.html" class="nav-link">Home</a>
       <a href="about.html" class="nav-link">About Us</a>
-      <a href="ContactUs.php" class="nav-link">Contact Us</a>
-      <a href="Membership1.php" class="nav-link">Join Us</a>
+      <a href="ContactUs.html" class="nav-link">Contact Us</a>
+      <a href="Membership1.html" class="nav-link">Join Us</a>
       <a href="pay.html" class="nav-link">Donation</a>
-      <a href="login.php" class="nav-link">Sign In</a>
+      <a href="login.html" class="nav-link">Sign In</a>
     </div>
   </nav>
 </head>
